2008-02-13  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalmount.c:
	Don't show nfs mounts (#516036)

2008-02-12  Alexander Larsson  <alexl@redhat.com>

	* hal/ghalvolumemonitor.c (g_hal_volume_monitor_finalize):
	Don't double free list optical disc list.

2008-02-11  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.7 ===

2008-02-11  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2008-02-11  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
	Set the correct copy name.
	Set description.

2008-02-11  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsmb.c:
        (do_set_display_name):
	Fix typo: get_dirname, not get_basename.
	Fixes renames on smb (#514126)

2008-02-11  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Set new path in set_display name.
	
        * daemon/gvfsjobsetdisplayname.c:
	Assert that new_path is set

2008-02-11  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * client/gdaemonfileinputstream.c:
        * client/gdaemonfileoutputstream.c:
        * common/gsysutils.c:
        * common/gvfsdaemonprotocol.c:
        * daemon/gvfsbackendburn.c:
        * daemon/gvfsbackendcdda.c:
        * daemon/gvfsbackenddav.c:
        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendsmb.c:
        * daemon/gvfsbackendsmbbrowse.c:
        * daemon/gvfsbackendtest.c:
        * daemon/gvfsdaemonutils.c:
        * daemon/gvfsjob.c:
        * daemon/mount.c:
        * daemon/pty_open.c:
	Save errno befor making other calls.
	Be safe when calling g_set_error()
	Patch from Christian Persch (#514822)

2008-02-11  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * daemon/gvfsbackendcomputer.c:
        * hal/ghalvolume.c:
        * programs/gvfs-mount.c:
	Update for the new mount flag argument.
	
        * hal/ghaldrive.c:
        * programs/gvfs-open.c: